mvern 04/17/2003
----------------
 + huge changes to decryption code, movement update handling, and a number
     of other things i'm likely forgetting.  
 o new libEQ.a required
 + changed some QT stuff to allow compile with version included in 
     debian-unstable out of the box
 - many thanks to dvorak for a good portion of the work done to get things
     up and running again
 + Version 4.3.7

fee (floyd) 02/21/2003
-----------------------
 + changed comparison op == to = in Makefile.dist for shell compatibility (sh vs bash)
 + fixed up Qt detection when QTDIR is not set, acinclude.m4

bbobcat 02/20/03
-----------------------

 + struct update to realign skill values so they work

mvern  02/18/03
-----------------------

 + Misc. opcode and struct updates, also reordered the updated/working
      opcodes in opcodes.h
 + Applied patch #650401 - races fix 

ratt 15 Feb 03
-----------------------

+ Applied mverns patch to fix SEQ temporarily. Will break next patch,
	use it in good health in the mean time.
+ Bumped revision to 4.3.6 for tracking purposes.

Thanks Mvern!

casey 01/17/2003
-----------------------
  + applied quackrabbits patch #669753, fixes to some packet structs.

fee (floyd) 01/16/2003
-----------------------
  ShowEQ 4.3.5 
  + Applied mvern's patch to fix up the latest changes in the network code
    
ratt 9 Jan 03
-----------------------

+ Applied mvern's opcode fixes as a temporary measure to get things
  running.

fee (floyd)  01/03/2003  -  Happy New Year
-----------------------
+ ShowEQ 4.3.4
 + Bug Fixes
   - resolved Qt 3.x performance issues
   - rework some zoning logic to allow for future cleanups
   - clean up some structs in everquest.h
   - temp fix for wineX users

+ Requirement update
  ShowEQ will now require Qt 3.0.5+ from this release forward. 
   Qt 2.3.2 should still work as of this release but may cease to 
   work at a future time.

fee (floyd)  11/11/2002
-----------------------
+ ShowEQ 4.3.3
 + Bug Fixes