@@ -14,7 +14,11 @@
 #ifndef EQCOMPASS_H
 #define EQCOMPASS_H
 
+#ifdef __FreeBSD__
+#include <sys/types.h>
+#else
 #include <stdint.h>
+#endif
 
 #include <qwidget.h>
 #include <qsize.h>
