@@ -17,7 +17,11 @@
 #ifndef SPAWNSHELL_H
 #define SPAWNSHELL_H
 
+#ifdef __FreeBSD__
+#include <sys/types.h>
+#else
 #include <stdint.h>
+#endif
 #include <stdio.h>
 #include <math.h>
 
